<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BoardGameCrap</string>
    <string name="addGameText">Add Game</string>
    <string name="game_name">Name:</string>
    <string name="numberOfRounds">Number of rounds:</string>
    <string name="playTime">Play time</string>
    <string name="add">Add</string>
    <string name="countdown_timer">%1$d:%2$02d:%3$02d</string>
    <string name="round_x_of_z">Round %1$d of %2$d</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="avg_round_time">Avg. time for remaining %1$d rounds: %2$d:%3$d:%4$d</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_delete_title">Edit/Delete</string>
    <string name="addEventText">Add Event</string>
    <!-- strings for main view -->
    <string name="mainEvents">Events</string>
    <string name="mainGameTimers">Game Timers</string>
    <string name="mainPlays">Plays</string>
    <string name="mainSettings">Settings</string>
    <!-- strings for settings view -->
    <string name="settingsCalendar">Calendar</string>
    <string name="BGGUsername">BGG Username</string>
</resources>
