<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/round_x_of_z"
                android:id="@+id/timerRound" android:layout_gravity="left|center_vertical" android:gravity="center"
                android:textSize="40dp"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/countdown_timer"
                android:id="@+id/countdown"
                android:textSize="60dp" android:textIsSelectable="false"/>
        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/avg_round_time"
                android:gravity="center"
                android:id="@+id/avg_round_time"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:layout_gravity="center">
            <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/start"
                    android:id="@+id/buttonStart" android:layout_weight="1" android:onClick="onStart"/>
            <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/stop"
                    android:id="@+id/buttonStop" android:layout_gravity="left|center_vertical" android:layout_weight="1"
                    android:onClick="onStop"/>
        </LinearLayout>
    </LinearLayout>
